2007-12-08  Brian Pepple  <bpepple@fedoraproject.org>

	Fix so correct libdir is used on x86_64 (#502531).

	* libepc-1.0.pc.in, libepc-ui-1.0.pc.in:
	Use autoconf variables instead of hard-coded paths.

2007-12-06  Mathias Hasselmann  <mathias@openismus.com>

	Fix some minor glitches.

	* libepc/dispatcher.c: Ensure to init group field of EpcService.
	* libepc/publisher.c: Remove TODO comment regarding MIME type.
	* tests/test-publisher-unique.c: Show message before terminating first
	publisher. Reduce delay before terminating that first publisher.

2007-12-06  Mathias Hasselmann  <mathias@openismus.com>

	Get MIME type of files from gio when available.

	* configure.ac: Check for gio-2.0 package.
	* libepc/publisher.c: Call g_content_type_guess when possible.

2007-12-06  Mathias Hasselmann  <mathias@openismus.com>

	Put idle sockets the cleanup iterator finds into a list, instead of
	directly disconnecting them. Disconnecting them triggers the
	"disconnected" signal, which causes the currently inspected socket
	getting removed from the currently iterated hash table - very bad.

	* libepc/publisher.c: Put idle clients into a list and disconnect
	them in epc_publisher_quit, instead of disconnecting them immediatly
	in epc_publisher_disconnect_idle_cb.

2007-12-06  Mathias Hasselmann  <mathias@openismus.com>

	Provide initial implementation of unique-service collision handling.

	* libepc/dispatcher.c: Add collision-handling and service-cookie
	properties. Provide initial implementation of unique-service
	collision handling.
	* libepc/dispatcher.h: Add EpcCollisionHandling enumeration.
	Add accessors for collision-handling and service-cookie properties.
	* libepc/publisher.c, libepc/publisher.h: Add collision-handling
	and service-cookie properties, which just forward to the dispatcher.
	* tests/test-publisher-unique.c: Test the unique service feature.
	* Makefile.am, tests/.gitignore: Add tests/test-publisher-unique.
